WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190894
InspectorCanvas is not getting cleared properly for OffscreenCanvas
https://bugs.webkit.org/show_bug.cgi?id=190894
Summary
InspectorCanvas is not getting cleared properly for OffscreenCanvas
Joseph Pecoraro
Reported
2018-10-24 18:33:44 PDT
InspectorCanvas is not getting cleared properly for OffscreenCanvas $ run-webkit-tests http/wpt/offscreen-canvas --release --dump-render-tree --guard-malloc --time-out-ms=10000 --iterations=10 --verbose --exit-after-n-failures=1 … [1/40] http/wpt/offscreen-canvas/getContext-webgl.html passed [2/40] http/wpt/offscreen-canvas/offscreencanvas.constructor.html passed [3/40] http/wpt/offscreen-canvas/transferToImageBitmap-empty.html passed [4/40] http/wpt/offscreen-canvas/transferToImageBitmap-webgl.html failed unexpectedly (DumpRenderTree crashed [pid=10060]) Exiting early after 1 failures. 4 tests run. Crash: Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 WebCore::InspectorCanvasAgent::clearCanvasData() + 108 1 WebCore::InspectorInstrumentation::didCommitLoadImpl(WebCore::InstrumentingAgents&, WebCore::Frame&, WebCore::DocumentLoader*) + 217 2 WebCore::FrameLoader::dispatchDidCommitLoad(std::optional<WebCore::HasInsecureContent>) + 120 3 WebCore::FrameLoader::receivedFirstData() + 35 4 WebCore::DocumentLoader::commitData(char const*, unsigned long) + 2274
Attachments
[PATCH] Proposed Fix
(5.17 KB, patch)
2018-10-24 18:39 PDT
,
Joseph Pecoraro
ews-watchlist
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from ews113 for mac-sierra
(827.85 KB, application/zip)
2018-10-24 19:48 PDT
,
EWS Watchlist
no flags
Details
[PATCH] Proposed Fix
(7.84 KB, patch)
2018-10-24 20:29 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
[PATCH] Proposed Fix
(5.14 KB, patch)
2018-10-24 20:33 PDT
,
Joseph Pecoraro
no flags
Details
Formatted Diff
Diff
Show Obsolete
(3)
View All
Add attachment
proposed patch, testcase, etc.
Joseph Pecoraro
Comment 1
2018-10-24 18:34:20 PDT
<
rdar://problem/45498435
>
Joseph Pecoraro
Comment 2
2018-10-24 18:39:32 PDT
Created
attachment 353070
[details]
[PATCH] Proposed Fix
Radar WebKit Bug Importer
Comment 3
2018-10-24 18:40:49 PDT
<
rdar://problem/45541593
>
EWS Watchlist
Comment 4
2018-10-24 19:48:15 PDT
Comment on
attachment 353070
[details]
[PATCH] Proposed Fix
Attachment 353070
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/9720095
Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 5
2018-10-24 19:48:16 PDT
Created
attachment 353073
[details]
Archive of layout-test-results from ews113 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews113 Port: mac-sierra Platform: Mac OS X 10.12.6
Joseph Pecoraro
Comment 6
2018-10-24 20:29:08 PDT
Created
attachment 353074
[details]
[PATCH] Proposed Fix
Joseph Pecoraro
Comment 7
2018-10-24 20:33:37 PDT
Created
attachment 353075
[details]
[PATCH] Proposed Fix One of the ASSERTs was invalid since a context might never have been created. Retrying without that one assert.
WebKit Commit Bot
Comment 8
2018-10-25 01:35:01 PDT
Comment on
attachment 353075
[details]
[PATCH] Proposed Fix Clearing flags on attachment: 353075 Committed
r237409
: <
https://trac.webkit.org/changeset/237409
>
WebKit Commit Bot
Comment 9
2018-10-25 01:35:03 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug